# FrappeTrack-Backend

./: .pre-commit-config.yaml  README.md  pyproject.toml
frappetrack/: hooks.py  modules.txt
frappetrack/api/: activity_type_api.py  project.py  task.py  timesheet.py  user.py
frappetrack/frappetrack/custom/: timesheet_detail.json
frappetrack/utils/: auth_utils.py
